--- a/embedding_lo.ipynb
+++ b/embedding_lo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "[32165 rows x 8 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "[32165 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "2220"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "636"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "[32165 rows x 9 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,52 +713,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: mps\n",
-      "Les embeddings existent déjà dans ChromaDB.\n"
+      "Using device: cuda\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Hardware accelerator e.g. GPU is available in the environment, but no `device` argument is passed to the `Pipeline` object. Model will be on CPU.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* Running on local URL:  http://127.0.0.1:7861\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -770,7 +733,7 @@
     "import gradio as gr\n",
     "\n",
     "# Vérifiez si le GPU est disponible\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_built() else \"cpu\"\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
     "# Initialisez l'instance de ChromaDB (Vector Store)\n",
@@ -805,6 +768,8 @@
     "\n",
     "# Fonction RAG pour répondre aux questions\n",
     "def rag_pipeline(query):\n",
+    "    \n",
+    "    query = llm(f\"Rephrase the following question or sentence into a complete statement.:\\n {query}\")[0]['generated_text']\n",
     "    # Générer l'embedding de la requête\n",
     "    query_embedding = embedding_model.encode(query, device=device).tolist()\n",
     "    \n",
@@ -838,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1058,6 +1023,9 @@
     "\n",
     "# Fonction RAG pour répondre aux questions\n",
     "def rag_pipeline(query):\n",
+    "    \n",
+    "    query = llm(f\"Rephrase the following question or sentence into a complete statement.:\\n {query}\")[0]['generated_text']\n",
+    "\n",
     "    # Générer l'embedding de la requête\n",
     "    query_embedding = embedding_model.encode(query, device=device).tolist()\n",
     "    \n",
@@ -1099,7 +1067,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "rag_env",
    "language": "python",
    "name": "python3"
   },
@@ -1113,7 +1081,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
