--- a/LoRa Bart/project_deeplearning.ipynb
+++ b/LoRa Bart/project_deeplearning.ipynb
@@ -109,7 +109,7 @@
         "train_dataset = QADataset(inputs, labels)\n",
         "\n",
         "# Continue with model fine-tuning...\n",
-        "model = BartForConditionalGeneration.from_pretrained('lucadiliello/bart-small')\n",
+        "model = BartForConditionalGeneration.from_pretrained('facebook/bart-base')\n",
         "# Configure LoRA\n",
         "lora_config = LoraConfig(\n",
         "    task_type=TaskType.SEQ_2_SEQ_LM,  # Specify the task type\n",
@@ -129,7 +129,7 @@
         "    evaluation_strategy=\"no\",\n",
         "    learning_rate=5e-5,\n",
         "    per_device_train_batch_size=4,\n",
-        "    num_train_epochs=1,\n",
+        "    num_train_epochs=5,\n",
         "    save_steps=10,\n",
         "    save_total_limit=2,\n",
         "    logging_dir=\"./logs_lora\",\n",
